CHANGELOG
=========
0.1.38 (unreleased) 
----------------------
- Added util module (angle & coincident methods)
- Added distance on Point class
- Fixed some docstring after rename to simplegeom

0.1.37 (July 12, 2012) 
----------------------
- Changed name of packages to simplegeom

0.1.36 (July 10, 2012)
----------------------
- First public release