@@ -2,6 +2,7 @@ CHANGELOG
 =========
 0.1.38 (unreleased) 
 ----------------------
+- __getitem__ of Polygon now returns LinearRing instead of LineString
 - Added util module (angle & coincident methods)
 - Added distance on Point class
 - Fixed some docstring after rename to simplegeom
